--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,10 +38,12 @@ jobs:
           # the resulting fred upload and JAR will work everywhere.
           # We only test against master on a single Java version to keep the matrix small, all the others
           # will be tested against next by the second and following "jdk:" below.
-          - env: FRED=master BUILDER=gradle DEPLOY=1
+          - fred-branch: master
+            builder: gradle # FIXME: Can probably be removed as it is equal to the default.
+            upload-jar-to-freenet: 1
             # Travis doesn't support this yet so we will hardcode it:
             ## jdk: openjdk$FREENET_MINIMUM_JAVA_VERSION
-            jdk: openjdk8
+            java-version: 8
           
           - jdk: openjdk8
             # Still use Ant on one Java version to ensure it keeps working.
