GitHub Actions: Trim step's name to make it fit into its place on the UI

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,7 +54,7 @@ jobs:
     
     name: >-
         Java: ${{matrix.java-version}},
-        fred branch: ${{matrix.fred-branch}},
+        fred: ${{matrix.fred-branch}},
         builder: ${{matrix.WoT-builder}},
         deploy: ${{matrix.upload-jar-to-freenet}}
     
