GitHub Actions: Amend the previous commit

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,9 +53,9 @@ jobs:
             WoT-builder: ant
     
     name: >-
-        Java: ${{matrix.java-version}},
-        fred: ${{matrix.fred-branch}},
-        builder: ${{matrix.WoT-builder}},
+        Java: ${{matrix.java-version}}
+        fred: ${{matrix.fred-branch}}
+        builder: ${{matrix.WoT-builder}}
         deploy: ${{matrix.upload-jar-to-freenet}}
     
     steps:
