GitHub Actions: Increase priority of trying w/ Oracle Java to FIXME
Windows users are on Oracle's Java very likely so we should test with
it.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,7 +67,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         # FIXME: Choose a distribution.
-        # TODO: Also test against Oracle's JDK once GHA supports it.
+        # FIXME: Also test against Oracle's JDK once GHA supports it.
         distribution: 'adopt'
         java-version: ${{matrix.java-version}}
     
