GitHub Actions: Fix failure of apt package installation
Source:
https://stackoverflow.com/questions/57982945/how-to-apt-get-install-in-a-github-actions-workflow

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,7 +63,7 @@ jobs:
     steps:
     - name: Install apt packages
       # python3-pip is for .travis.upload-jar-to-freenet.sh
-      run: apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
+      run: sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
     
     - name: Install Java
       uses: actions/setup-java@v2
