GitHub Actions: Fix to not cancel execution for all Java versions if one fails
Source:
https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstrategyfail-fast

Based on Freetalk commit 469cbdb8f8cd62f5fc670b962d63d2fefb1b6f28

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,6 +17,7 @@ jobs:
     # FIXME: Also test on Windows using strategy.matrix
     runs-on: ubuntu-18.04
     strategy:
+      fail-fast: false # Don't cancel execution for all Java versions if one fails.
       matrix:
         # 8 is $FRED_MINIMUM_JAVA_VERSION currently.
         # FIXME: Try if ${{env.FRED_MINIMUM_JAVA_VERSION}} works here.
