GitHub Actions: Fix build failure due to lack of checkout of git submodules
Source:
https://github.com/marketplace/actions/checkout#usage

Based on Freetalk commit ed713c8be67debadc87a49e963e040c957f37304

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -85,6 +85,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: plugin-WebOfTrust # Available via: "$GITHUB_WORKSPACE/plugin-WebOfTrust"
+        submodules: true # FIXME: The Gradle script should do it automatically like the Ant one did.
     
     - name: Compile Freenet Git repository, start a node
       run: |
