GitHub Actions: Remove Java 9 & 10, fred compilation fails there and it's probably not possible to fix
It fails to download fred's dependencies because Gradle cannot find a
suitable SSL certificate trust path, see Freetalk commit
6d31df51caa38313645f2e264dd5628b752a4e00

I suspect this is because Java 9 and 10 are EOL so the certificates they
ship aren't updated anymore in the Adopt OpenJDK distribution which GHA
uses.
It probably did work on Travis CI because it might have used a different
OpenJDK distribution, or because the certificates expired just some days
ago.

Either way this is not worth the effort trying to fix it any more
because supporting EOL Java versions is not our job.

Based on Freetalk commit 687c0867d6c5103adcd348cdfaf41ca0819b2e27

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,10 @@ jobs:
       fail-fast: false # Don't cancel execution for all Java versions if one fails.
       matrix:
         # 8 is $FRED_MINIMUM_JAVA_VERSION currently.
+        # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
         # FIXME: Try if ${{env.FRED_MINIMUM_JAVA_VERSION}} works here.
         # FIXME: Trim the set of Java versions to avoid exhausting our CPU time quota too quickly.
-        java-version: [9, 10, 11, 12, 13, 14, 15]
+        java-version: [11, 12, 13, 14, 15]
         fred-branch:  [next]
         # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
         WoT-builder: [gradle]
