GitHub Actions: Trim step's name to make it fit into its place on the UI

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,7 +57,7 @@ jobs:
             WoT-builder: ant
     
     name: >-
-        Java: ${{matrix.java-version}}
+        JDK: ${{matrix.java-version}}
         fred: ${{matrix.fred-branch}}
         builder: ${{matrix.WoT-builder}}
         deploy: ${{matrix.upload-jar-to-freenet}}
