GitHub Actions: Try to fix pyFreenet3 setup by installing python3-setuptools
It would fail with:
> ModuleNotFoundError: No module named 'setuptools'

Source for the possible fix:
https://stackoverflow.com/questions/14426491/python-3-importerror-no-module-named-setuptools

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -65,7 +65,8 @@ jobs:
     steps:
     - name: Install apt packages
       # python3-pip is for .travis.upload-jar-to-freenet.sh
-      run: sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip
+      run: "sudo apt-get --assume-yes install ant ant-optional junit4 libhamcrest-java python3-pip 
+        python3-setuptools"
     
     - name: Install Java
       uses: actions/setup-java@v2
