--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -116,9 +116,8 @@ jobs:
       
       run: |
         echo "Starting a Freenet node already to connect to network far before deploy stage..." &&
-        pushd "$GITHUB_WORKSPACE"/fred &&
-        "$GITHUB_WORKSPACE/plugin-WebOfTrust/.travis.start-freenet.sh" && # FIXME: Rename the script
-        popd
+        cd "$GITHUB_WORKSPACE"/fred &&
+        "$GITHUB_WORKSPACE/plugin-WebOfTrust/.travis.start-freenet.sh" # FIXME: Rename the script
     
     - name: Compile and test WoT
       run: |
