GitHub Actions: Trim step's name to make it fit into its place on the UI

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,7 +62,7 @@ jobs:
             upload-jar-to-freenet: false
     
     name: >-
-        JDK: ${{matrix.java-version}}
+        JDK${{matrix.java-version}}
         fred: ${{matrix.fred-branch}}
         builder: ${{matrix.WoT-builder}}
         deploy: ${{matrix.upload-jar-to-freenet}}
