--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,17 +33,18 @@ jobs:
         # Notice: The below special cases will also define variables with the same values as the
         # above defaults. This is necessary because otherwise GHA would set them to be empty.
         include:
-          # We will run most of our tests against fred branch next (= the development branch) to fulfill
-          # our purpose of integration testing.
-          # But first we will hereby also test on branch master to ensure WoT works against the latest
-          # stable release as well because plugins can be updated without a new Freenet release.
-          # We also test on master before next because we will upload the WoT JAR to Freenet on master
-          # and that will take quite a bit of time so we should do it first to ensure the other faster
-          # build jobs can complete concurrently.
+          # We will run most of our tests against fred branch next (= the development branch) to
+          # fulfill our purpose of integration testing.
+          # But we will hereby also test on branch master to ensure WoT works against the
+          # latest stable release as well because plugins can be updated without a new Freenet
+          # release.
           # We will upload from this fred and Java version because they are the minimum to guarantee
           # the resulting fred upload and JAR will work everywhere.
-          # We only test against master on a single Java version to keep the matrix small, all the others
-          # will be tested against next by the second and following "jdk:" below.
+          # We only test against master on a single Java version to keep the matrix small.
+          #
+          # Notice: If GHA did have a limit on the number of jobs being run concurrently we should
+          # run this one first as it is the slowest. However as of 2021-12-27 there is no limit:
+          # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#jobsjob_idstrategymax-parallel
           - fred-branch: master
             upload-jar-to-freenet: true
             # Travis doesn't support this yet so we will hardcode it:
