--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,10 +20,13 @@ jobs:
       fail-fast: false # Don't cancel execution for all Java versions if one fails.
       matrix:
         # 8 is $FRED_MINIMUM_JAVA_VERSION currently.
+        # TODO: Code quality: As of 2022-01-03 using ["${{env.FRED_MINIMUM_JAVA_VERSION}}", ...]
+        # instead of [8, ...] does not work, see: https://github.com/actions/runner/issues/480
+        # Retry once the above bugtracker entry is fixed.
+        # 
         # 9, 10 excluded because: Building fred fails there, probably because they're EOL.
-        # FIXME: Try if ${{env.FRED_MINIMUM_JAVA_VERSION}} works here.
         # FIXME: Trim the set of Java versions to avoid exhausting our CPU time quota too quickly.
-        java-version: [11, 12, 13, 14, 15]
+        java-version: [8, 11, 12, 13, 14, 15]
         fred-branch:  [next]
         # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
         WoT-builder: [gradle]
